# stock-ai

./: .env  .gitignore  AI_SIGNAL_GUIDE.md  BUGFIX_SUMMARY.md  COMPLETE_GUIDE.md  CONFIG_GUIDE.md  DAILY_ANALYSIS_GUIDE.md  DEEPSEEK_USAGE.md  INTRADAY_BARS_ANALYSIS.md  LOGGING_GUIDE.md  LOG_AI_DETAIL.md  NOTIFICATION_POLICY.md  QUICKSTART.md  README.md  README_LOGGER.md  T_TRADING_GUIDE.md  create_stock_daily_table.sql  create_stock_intraday_snapshot_table.sql  debug_signal.py  feishu_notice.py  get_realtime.py  ingest_eastmoney_daily_to_mysql.py  logger_config.py  monitor_intraday_signals.py  poll_eastmoney_intraday_snapshot_to_mysql.py  poll_eastmoney_intraday_to_mysql.py  pyproject.toml  requirements.txt  run_aftermarket_analysis.py  run_monitor.sh  run_premarket_analysis.py  test_ai_signal_now.py  test_deepseek_signal.py  test_extract_field.py  test_intraday_bars.py  test_t_signal.py  tushare_mcp.py
